Add navbar and style jumbotron

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,20 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class=" teal lighten-2">
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">Committee Explorer</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <li><a href="collapsible.html">JavaScript</a></li>
+    </ul>
+  </div>
+</nav>
 
-{{outlet}}
+
+<div class="jumbotron  teal lighten-5">
+  <h1>Congressional Explorer</h1>
+</div>
+
+<div class="container">
+
+  {{outlet}}
+</div>
