--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <nav class=" teal lighten-2">
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Committee Explorer</a>
+    {{#link-to 'index' class="brand-logo"}}Congressional Explorer{{/link-to}}
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="sass.html">Sass</a></li>
       <li><a href="badges.html">Components</a></li>
