--- a/app/templates/committee.hbs
+++ b/app/templates/committee.hbs
@@ -1,6 +1,5 @@
 {{log model}}
 {{#each model.committee as |committee|}}
-  {{log committee}}
   <h2>Details for <a href="{{committee.url}}" target="_blank">{{committee.name}}</a></h2>
   <div class="row">
     <div class="col s6">
@@ -16,7 +15,11 @@
           <h4>Active Bills</h4>
         </div>
         {{#each model.bills as |bill|}}
-          <a href="{{bill.urls.govtrack}}" class="collection-item">{{bill.short_title}} - introduced {{moment-from-now bill.introduced_on}}</a>
+          <a href="{{bill.urls.govtrack}}" class="collection-item">
+            <span class="truncate">{{#if bill.short_title}}{{bill.short_title}}{{else}}{{bill.official_title}}{{/if}}</span>
+            Introduced {{moment-calendar bill.introduced_on}}<br>
+            Last Active {{moment-from-now bill.history.active_at}}
+          </a>
         {{/each}}
       </div>
     </div>
