--- a/app/templates/subcommittee.hbs
+++ b/app/templates/subcommittee.hbs
@@ -1,5 +1,5 @@
 {{log model}}
-{{#each model as |subcommittee|}}
+{{#each model.committee as |subcommittee|}}
   <h2>Details for <a href="{{subcommittee.url}}" target="_blank">{{subcommittee.name}}</a></h2>
   <div class="row">
     <div class="col s6">
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="col s6">
-
+          {{bills-tile bills=model.bills}}
     </div>
   </div>
 {{/each}}
